objects/WT_Business_Unit_Entity__c.object
<CustomObject>
    <fields>
        <fullName>WT_Bank_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Bank__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Branch_Customer_Num_Of_Transactions__c</fullName>
        <label>Branch Customer Number Of Transactions</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Branch_Customer_TPC__c</fullName>
        <label>Branch Customer TPC</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Branch_Customer_Transaction_Percent__c</fullName>
        <label>Branch Customer with Transaction %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WT_Branch_Customers_Transaction__c</fullName>
        <label>Branch Customers Transaction</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Branch_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Branch Indicator?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Branch_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Branch__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Charter_Factor__c</fullName>
        <label>WM Charter Factor</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Charter__c</fullName>
        <description>Cost Center</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Charter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CostCenter__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CostCenter</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Foot_Traffic_Level__c</fullName>
        <label>Foot Traffic Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Fusion_Feed_Branch__c</fullName>
        <formula>WT_Bank_Number__c + LPAD(WT_Branch_Number__c,3,&apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fusion Feed Branch #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Fusion_Location__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fusion Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABL,</fullName>
                </value>
                <value>
                    <fullName>Agricultural Lending</fullName>
                </value>
                <value>
                    <fullName>Business Banking</fullName>
                </value>
                <value>
                    <fullName>Community Advantage</fullName>
                </value>
                <value>
                    <fullName>Community Banking</fullName>
                </value>
                <value>
                    <fullName>Community Impact</fullName>
                </value>
                <value>
                    <fullName>Consumer Lending</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>CRE</fullName>
                </value>
                <value>
                    <fullName>Franchise</fullName>
                </value>
                <value>
                    <fullName>Government Funds</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>MAD - Managed Assets Division</fullName>
                </value>
                <value>
                    <fullName>Middle Market</fullName>
                </value>
                <value>
                    <fullName>Professional Practice Group</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>SBA</fullName>
                </value>
                <value>
                    <fullName>Support Role</fullName>
                </value>
                <value>
                    <fullName>Swap</fullName>
                </value>
                <value>
                    <fullName>Syndication/Capital Markets</fullName>
                </value>
                <value>
                    <fullName>Treasury Management, Wealth - Chicago Trust</fullName>
                </value>
                <value>
                    <fullName>Wealth - Great Lakes Advisors</fullName>
                </value>
                <value>
                    <fullName>Wealth - Wintrust Investments</fullName>
                </value>
                <value>
                    <fullName>Wealth Management, Wealth Services</fullName>
                </value>
                <value>
                    <fullName>Wintrust Funds Group</fullName>
                </value>
                <value>
                    <fullName>Wintrust Receivables Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Market__c</fullName>
        <description>Division Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Market</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_New_Customers__c</fullName>
        <label>New Customers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Parent_Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Self lookup tp Business Unit</description>
        <label>Parent Branch Factor</label>
        <referenceTo>WT_Business_Unit_Entity__c</referenceTo>
        <relationshipLabel>Branch Factors</relationshipLabel>
        <relationshipName>Business_Unit_Entity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Total_Current_Bank_Customers__c</fullName>
        <label>Total Current Bank Customers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Total_Customers__c</fullName>
        <label>Total Customers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Total_Foot_Traffic__c</fullName>
        <label>Foot Traffic</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Total_Number_Of_Transactions__c</fullName>
        <label>Total Number Of Transactions</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Unique_Customer_TPC__c</fullName>
        <label>Unique Customer TPC</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Unique_Customers_Transaction__c</fullName>
        <label>Unique Customers Transaction</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Unique_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WT_WM_Branch_Factor__c</fullName>
        <label>WM Branch Factor</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_WM_Charter_Factor__c</fullName>
        <formula>WT_New_Customers__c /  WT_Total_Foot_Traffic__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WM Charter Factor</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Branch Factor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>WT_Parent_Business_Unit__c</columns>
        <columns>WT_Line_of_Business__c</columns>
        <columns>WT_Unique_Key__c</columns>
        <columns>WT_Fusion_Feed_Branch__c</columns>
        <columns>WT_Bank_Number__c</columns>
        <columns>WT_Branch_Number__c</columns>
        <columns>WT_WM_Branch_Factor__c</columns>
        <columns>WT_Total_Foot_Traffic__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branch Factors</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>